--- a/.github/workflows/gradle-server.yml
+++ b/.github/workflows/gradle-server.yml
@@ -60,7 +60,7 @@ jobs:
 
     # 압축한 프로젝트를 S3로 전송합니다.
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./41-mainproject-23-deploy.zip s3://$S3_BUCKET_NAME/41-mainproject-23-deploy.zip
+      run: aws s3 cp --region ap-northeast-2 ./41-mainproject-23.zip s3://$S3_BUCKET_NAME/41-mainproject-23.zip
       working-directory: ${{ env.working-directory }}
 
     # CodeDeploy에게 배포 명령을 내립니다.
@@ -69,4 +69,4 @@ jobs:
         aws deploy create-deployment --application-name 41-mainproject-23 
         --deployment-config-name CodeDeployDefault.AllAtOnce
         --deployment-group-name 41-mainproject-23-group
-        --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=41-mainproject-23-deploy.zip
+        --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=41-mainproject-23.zip
