--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "date-fns": "^2.29.3",
+    "lodash": "^4.17.21",
+    "lodash.escaperegexp": "^4.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
