--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
