--- a/server/src/main/resources/application-server.yml
+++ b/server/src/main/resources/application-server.yml
@@ -1,4 +1,9 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 2MB
+
   datasource:
     url: jdbc:mysql://${RDS_ENDPOINT}/mainproject?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false&pinGlobalTxToPhysicalConnection=true
     username: ${RDS_MYSQL_ADMIN_ID}
@@ -41,6 +46,8 @@ server:
     encoding:
       force-response: true
   port: 8080
+  netty:
+    max-initial-line-length:
 
 jwt:
   secret-key: ${JWT_SECRET_KEY}
@@ -49,3 +56,15 @@ jwt:
 
 #config:
   #domain: ${AWS_S3}
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${S3_ACCESS_KEY}
+      secret-key: ${S3_SECRET_KEY}
+    s3: #버킷이름
+      bucket: ${S3_BUCKET}
+    region: #S3 지역
+      static: ap-northeast-2
+    stack:
+      auto: false
