--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -2,16 +2,16 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
-    password: ${REDIS_PASSWORD}
+    #password: ${REDIS_PASSWORD}
   servlet:
     multipart:
       max-file-size: 2MB
       max-request-size: 2MB
 
   datasource:
-    url: jdbc:mysql://${RDS_ENDPOINT}/mainproject?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false&pinGlobalTxToPhysicalConnection=true
-    username: ${RDS_MYSQL_ADMIN_ID}
-    password: ${RDS_MYSQL_ADMIN_PW}
+    #url: jdbc:mysql://${RDS_ENDPOINT}/mainproject?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false&pinGlobalTxToPhysicalConnection=true
+    #username: ${RDS_MYSQL_ADMIN_ID}
+    #password: ${RDS_MYSQL_ADMIN_PW}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -34,8 +34,8 @@ spring:
       client:
         registration:
           google:
-            clientId: ${GOOGLE_CLIENT_ID}
-            clientSecret: ${GOOGLE_SECRET}
+            #clientId: ${GOOGLE_CLIENT_ID}
+            #clientSecret: ${GOOGLE_SECRET}
             scope:
               - email
               - profile
@@ -54,7 +54,7 @@ server:
     max-initial-line-length:
 
 jwt:
-  secret-key: ${JWT_SECRET_KEY}
+  #secret-key: ${JWT_SECRET_KEY}
   access-token-expiration-minutes: 30
   refresh-token-expiration-minutes: 420
 
@@ -64,10 +64,10 @@ jwt:
 cloud:
   aws:
     credentials:
-      access-key: ${S3_ACCESS_KEY}
-      secret-key: ${S3_SECRET_KEY}
+      #access-key: ${S3_ACCESS_KEY}
+      #secret-key: ${S3_SECRET_KEY}
     s3: #버킷이름
-      bucket: ${S3_BUCKET}
+      #bucket: ${S3_BUCKET}
     region: #S3 지역
       static: ap-northeast-2
     stack:
