[BE] 백엔드 6차 통신테스트 (#63)
* [Feat] : 공통기능 초기 셋팅 (#8)

* feat: 회원가입, 로그인, 비밀번호 변경, Jwt 기능 추가 (#9)

* [BE] feat: 예산 기능 추가 (#10)

* [Feat] : 공통기능 초기 셋팅

* feat : 예산/비용 CRUD

* feat: 일정 등록, 수정, 삭제 기능 추가 (#11)

* [BE] feat: 로그아웃 기능 추가 (#12)

* feat: 회원가입, 로그인, 비밀번호 변경, Jwt 기능 추가

* feat: 로그아웃 기능 추가

* [BE] style : 예산 코드 스타일 변경 (#13)

* [Feat] : 공통기능 초기 셋팅

* feat : 예산/비용 CRUD

* style : 예산과 비용 코드 스타일 변경 #10

* Update ExpenseDto.java

* style : 예산과 비용 코드 스타일 변경 #10

* [BE] feat: 각 날짜에 대한 장소 등록, 수정, 삭제, 특정 일정 조회 기능 추가 (#14)

* feat: 일정 등록, 수정, 삭제 기능 추가

* feat: 로그인 한 회원 조회 기능 추가

* feat: 각각 날짜에 대한 장소 등록, 수정, 삭제 기능 추가

* feat: 일정과 회원, 장소 연결 및 특정 일정 조회 기능 추가

* [BE] feat: 해당 유저가 작성한 전체 일정 조회 (#16)

* feat: 일정 등록, 수정, 삭제 기능 추가

* feat: 로그인 한 회원 조회 기능 추가

* feat: 각각 날짜에 대한 장소 등록, 수정, 삭제 기능 추가

* feat: 일정과 회원, 장소 연결 및 특정 일정 조회 기능 추가

* feat: 해당 유저가 작성한 전체 일정 조회

* [BE] fix: planMapper 병합 문제 수정 (#17)

* feat: 일정 등록, 수정, 삭제 기능 추가

* feat: 로그인 한 회원 조회 기능 추가

* feat: 각각 날짜에 대한 장소 등록, 수정, 삭제 기능 추가

* feat: 일정과 회원, 장소 연결 및 특정 일정 조회 기능 추가

* feat: 해당 유저가 작성한 전체 일정 조회

* fix: planMapper 병합 문제 수정

* [BE] feat: city 조회 기능 추가 (#18)

* feat: 일정 등록, 수정, 삭제 기능 추가

* feat: 로그인 한 회원 조회 기능 추가

* feat: 각각 날짜에 대한 장소 등록, 수정, 삭제 기능 추가

* feat: 일정과 회원, 장소 연결 및 특정 일정 조회 기능 추가

* feat: 해당 유저가 작성한 전체 일정 조회

* fix: planMapper 병합 문제 수정

* fix: plan 응답 데이터 수정

* feat: city 조회 기능 추가

* [BE] feat: OAuth기능 추가, 로그인시 memberId body에서 확인가능 (#20)

* feat: 회원가입, 로그인, 비밀번호 변경, Jwt 기능 추가

* feat: 로그아웃 기능 추가

* feat: OAuth기능 추가, 로그인시 memberId body에서 확인가능

* [BE] feat : 게시판 기능 추가 (#22)

* [Feat] : 공통기능 초기 셋팅

* feat : 예산/비용 CRUD

* style : 예산과 비용 코드 스타일 변경 #10

* Update ExpenseDto.java

* style : 예산과 비용 코드 스타일 변경 #10

* style : 예산/비용 url 형식 통일, reponse에 생성일 추가 #10

* style : 예산/비용 url 형식 통일, reponse에 생성일 추가 #10

* feat : 장소 - description 세팅 기능 추가 #14

* feat : 게시판 CRUD

* feat : 댓글 CRUD

* feat : 좋아요 기능 추가


--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -34,6 +34,7 @@ spring:
       client:
         registration:
           google:
+            redirect-uri: https://sebmain41team23.shop/login/oauth2/code/google
             #clientId: ${GOOGLE_CLIENT_ID}
             #clientSecret: ${GOOGLE_SECRET}
             scope:
@@ -55,7 +56,7 @@ server:
 
 jwt:
   #secret-key: ${JWT_SECRET_KEY}
-  access-token-expiration-minutes: 30
+  access-token-expiration-minutes: 1440
   refresh-token-expiration-minutes: 420
 
   #config:
