--- a/.github/workflows/gradle-server.yml
+++ b/.github/workflows/gradle-server.yml
@@ -18,6 +18,7 @@ permissions:
 env:
   S3_BUCKET_NAME: project-main23
   working-directory: ./server
+  PROPERTIES_PATH: ./server/src/main/resources/application.yml
 
 jobs:
   build:
