--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,13 +4,15 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.sql.init.data-locations=classpath*:db/h2/data.sql
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
 spring.security.oauth2.client.registration.google.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=profile,email
