--- a/.github/workflows/gradle-server.yml
+++ b/.github/workflows/gradle-server.yml
@@ -48,6 +48,7 @@ jobs:
         cloud.aws.credentials.access-key=${{ secrets.S3_ACCESS_KEY }}
         cloud.aws.credentials.secret-key=${{ secrets.S3_SECRET_KEY }}
         cloud.aws.s3.bucket=${{ secrets.S3_BUCKET }}
+        config.domain=${{ secrets.DOMAIN }}
         " >> ${{ env.PROPERTIES_PATH }}  
         
       # 연결 권한 설정
