--- a/server/build.gradle
+++ b/server/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation group: 'io.awspring.cloud', name: 'spring-cloud-starter-aws-parameter-store-config'
+	implementation group: 'org.json', name: 'json', version: '20220320'
 }
 
 dependencyManagement { // 블록 추가
