--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,8 +14,42 @@ spring.sql.init.data-locations=classpath*:db/h2/data.sql
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-spring.security.oauth2.client.registration.google.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/%7BregistrationId%7D
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/%7BregistrationId%7D
+spring.security.oauth2.client.registration.kakao.authorization-grant-type = authorization_code
+spring.security.oauth2.client.registration.kakao.client-authentication-method = POST
+spring.security.oauth2.client.registration.kakao.client-name =Kakao
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname, profile_image, account_email
+
+spring.security.oauth2.client.registration.naver.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/%7BregistrationId%7D
+spring.security.oauth2.client.registration.naver.authorization-grant-type = authorization_code
+spring.security.oauth2.client.registration.naver.scope=name, email, profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 logging.level.org.springframework.orm.jpa= DEBUG
 
