--- a/.github/workflows/gradle-server.yml
+++ b/.github/workflows/gradle-server.yml
@@ -45,6 +45,10 @@ jobs:
         spring.redis.password=${{ secrets.REDIS_PASSWORD }}
         spring.security.oauth2.client.registration.google.clientId=${{ secrets.GOOGLE_CLIENT_ID }}
         spring.security.oauth2.client.registration.google.clientSecret=${{ secrets.GOOGLE_SECRET }}
+        spring.security.oauth2.client.registration.kakao.client-id=${{ secrets.KAKAO_CLIENT_ID }}
+        spring.security.oauth2.client.registration.kakao.client-secret=${{ secrets.KAKAO_SECRET }}
+        spring.security.oauth2.client.registration.naver.clientId=${{ secrets.NAVER_CLIENT_ID }}
+        spring.security.oauth2.client.registration.naver.client-secret=${{ secrets.NAVER_SECRET }}
         cloud.aws.credentials.access-key=${{ secrets.S3_ACCESS_KEY }}
         cloud.aws.credentials.secret-key=${{ secrets.S3_SECRET_KEY }}
         cloud.aws.s3.bucket=${{ secrets.S3_BUCKET }}
