chore: 카카오, 네이버 oauth 설정 수정

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,16 +14,16 @@ spring.sql.init.data-locations=classpath*:db/h2/data.sql
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-spring.security.oauth2.client.registration.google.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/%7BregistrationId%7D
+spring.security.oauth2.client.registration.google.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.scope=profile,email
 
-spring.security.oauth2.client.registration.kakao.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/%7BregistrationId%7D
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.kakao.authorization-grant-type = authorization_code
 spring.security.oauth2.client.registration.kakao.client-authentication-method = POST
 spring.security.oauth2.client.registration.kakao.client-name =Kakao
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, profile_image, account_email
 
-spring.security.oauth2.client.registration.naver.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/%7BregistrationId%7D
+spring.security.oauth2.client.registration.naver.redirect-uri=https://sebmain41team23.shop/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.naver.authorization-grant-type = authorization_code
 spring.security.oauth2.client.registration.naver.scope=name, email, profile_image
 spring.security.oauth2.client.registration.naver.client-name=Naver
