--- a/.github/workflows/gradle-server.yml
+++ b/.github/workflows/gradle-server.yml
@@ -49,6 +49,8 @@ jobs:
         spring.security.oauth2.client.registration.kakao.client-secret=${{ secrets.KAKAO_SECRET }}
         spring.security.oauth2.client.registration.naver.clientId=${{ secrets.NAVER_CLIENT_ID }}
         spring.security.oauth2.client.registration.naver.client-secret=${{ secrets.NAVER_SECRET }}
+        spring.mail.username=${{ secrets.MAIL_USERNAME }}
+        spring.mail.password=${{ secrets.MAIL_PASSWORD }}
         cloud.aws.credentials.access-key=${{ secrets.S3_ACCESS_KEY }}
         cloud.aws.credentials.secret-key=${{ secrets.S3_SECRET_KEY }}
         cloud.aws.s3.bucket=${{ secrets.S3_BUCKET }}
