--- a/.github/workflows/gradle-server.yml
+++ b/.github/workflows/gradle-server.yml
@@ -49,6 +49,8 @@ jobs:
         spring.security.oauth2.client.registration.kakao.client-secret=${{ secrets.KAKAO_SECRET }}
         spring.security.oauth2.client.registration.naver.clientId=${{ secrets.NAVER_CLIENT_ID }}
         spring.security.oauth2.client.registration.naver.client-secret=${{ secrets.NAVER_SECRET }}
+        spring.security.oauth2.client.registration.facebook.clientId=${{ secrets.FACEBOOK_CLIENT_ID }}
+        spring.security.oauth2.client.registration.facebook.clientSecret=${{ secrets.FACEBOOK_SECRET }}
         spring.mail.username=${{ secrets.MAIL_USERNAME }}
         spring.mail.password=${{ secrets.MAIL_PASSWORD }}
         cloud.aws.credentials.access-key=${{ secrets.S3_ACCESS_KEY }}
