--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "lodash.escaperegexp": "^4.1.2",
     "moment": "^2.29.4",
