--- a/.github/workflows/gradle-server.yml
+++ b/.github/workflows/gradle-server.yml
@@ -18,6 +18,7 @@ permissions:
 env:
   S3_BUCKET_NAME: project-main23
   working-directory: ./server
+  PROPERTIES_PATH: ./server/src/main/resources/application.properties
 
 jobs:
   build:
@@ -31,6 +32,30 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        
+     # properties secret 설정
+    - name: Set application.properties
+      run: |
+        touch ${{ env.PROPERTIES_PATH }}
+        echo "
+        spring.datasource.url=${{ secrets.RDS_ENDPOINT }}
+        spring.datasource.username=${{ secrets.RDS_MYSQL_ADMIN_ID }}
+        spring.datasource.password=${{ secrets.RDS_MYSQL_ADMIN_PW }}
+        jwt.secret-key=${{ secrets.JWT_SECRET_KEY }}
+        spring.redis.password=${{ secrets.REDIS_PASSWORD }}
+        spring.security.oauth2.client.registration.google.clientId=${{ secrets.GOOGLE_CLIENT_ID }}
+        spring.security.oauth2.client.registration.google.clientSecret=${{ secrets.GOOGLE_SECRET }}
+        spring.security.oauth2.client.registration.kakao.client-id=${{ secrets.KAKAO_CLIENT_ID }}
+        spring.security.oauth2.client.registration.kakao.client-secret=${{ secrets.KAKAO_SECRET }}
+        spring.security.oauth2.client.registration.facebook.clientId=${{ secrets.FACEBOOK_CLIENT_ID }}
+        spring.security.oauth2.client.registration.facebook.clientSecret=${{ secrets.FACEBOOK_SECRET }}
+        spring.mail.username=${{ secrets.MAIL_USERNAME }}
+        spring.mail.password=${{ secrets.MAIL_PASSWORD }}
+        cloud.aws.credentials.access-key=${{ secrets.S3_ACCESS_KEY }}
+        cloud.aws.credentials.secret-key=${{ secrets.S3_SECRET_KEY }}
+        cloud.aws.s3.bucket=${{ secrets.S3_BUCKET }}
+        config.domain=${{ secrets.DOMAIN }}
+        " >> ${{ env.PROPERTIES_PATH }}  
         
       # 연결 권한 설정
     - name: Run chmod to make gradlew executable
