--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
+    "lodash.escaperegexp": "^4.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-date-range": "^1.4.0",
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.8.3"
   }
 }
